fix overflow issue

--- a/Style.css
+++ b/Style.css
@@ -24,7 +24,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 13px;
+    margin: 0 23px;
     position: relative;
     top: 0;
     z-index: 10000; /* Ensures header stays on top of other elements */
@@ -43,7 +43,7 @@ header h1 {
 /* Navigation menu styling */
 nav ul {
     list-style: none;
-    display: flex  !important;
+    display: flex;
     gap: 20px;
     margin: 0;
     padding: 10px;
@@ -267,6 +267,7 @@ nav ul li a{
         #mySkill {
             margin: 50px auto;
             padding: 20px;
+            overflow-x: hidden;
         }
 
         #mySkill h1 {
